Version 2.2.032
    Fixed bug where Roll would throw exceptions with certain CMI interactions
    Blast Mining no longer drops infested block variants
    Reduced bonus drops on Blast Mining and randomized results (see notes)

    NOTES:
    A balance pass for Blast Mining is coming, but for now, I've reduced the total bonus drops and clamped the yield ceiling as Blast Mining is a bit too good.

Version 2.2.031
    Fixed potential NPE when player or blockstate is null for Inventory events on Furnaces
    Fixed bug where en_us locale was being set system-wide (thanks BlvckBytes)
    Fixed bug where Decimal format would throw exception on non en_us systems (thanks BlvckBytes)
    (API) Added McMMOPlayerTameEntityEvent event (thanks Warriorrr)

Version 2.2.030
    Fixed bug where rupture task could cause an exception (Thanks Wariorrrr)
    Fixed bug where Smelting permission was needed for Alchemy XP gain
    Fixed material based salvage permissions not functioning (Thanks Momshroom)

Version 2.2.029
    Fixed bug where block checks at world height would throw IndexOutOfBounds exceptions
    Added Eyeblossom to experience.yml for Herbalism xp
    Added Bonus_Drops.Herbalism.Eyeblossom to config.yml to enable double/triple drops for Eyeblossom
    Added Pale_Hanging_Moss to experience.yml for Herbalism xp
    Added Pale_Moss_Block to experience.yml for Herbalism xp
    Added Pale_Moss_Carpet to experience.yml for Herbalism xp
    Added Pale_Oak_Log to experience.yml for Woodcutting xp
    Added Pale_Oak_Wood to experience.yml for Woodcutting xp
    Added Stripped_Pale_Oak_Log to experience.yml for Woodcutting xp
    Added Stripped_Pale_Oak_Wood to experience.yml for Woodcutting xp
    Added Bonus_Drops.Woodcutting.Pale_Oak_Wood to config.yml to enable double/triple drops for Pale Oak Wood
    Added Bonus_Drops.Woodcutting.Pale_Oak_Log to config.yml to enable double/triple drops for Pale Oak Log