@@ -331,6 +331,8 @@ Experience_Values:
         Mushroom_Stem: 80
     Herbalism:
         Eyeblossom: 66
+        Open_Eyeblossom: 66
+        Closed_Eyeblossom: 66
         Pitcher_Plant: 160
         Pink_Petals: 10
         Small_Dripleaf: 140
@@ -397,6 +399,7 @@ Experience_Values:
         Cocoa: 30
         Potatoes: 50
         Wheat: 50
+        Beetroot: 50
         Beetroots: 50
         Nether_Wart: 50
         Dead_Bush: 30
